@@ -13,6 +13,7 @@ import com.signnow.javasampleapp.ExampleInterface;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
+import java.io.File;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.nio.file.Files;
@@ -53,18 +54,23 @@ public class IndexController implements ExampleInterface {
     private static final String REDIRECT_BASE_URL = "http://localhost:8080/samples/EmbeddedSenderWithFormDGAdjunct";
 
     @Override
-    public ResponseEntity<String> handleGet(Map<String, String> queryParams) throws IOException {
+        public ResponseEntity<String> handleGet(Map<String, String> queryParams) throws IOException {
         // Demo: Simple HTML page serving
-        String html = new String(Files.readAllBytes(Paths.get("src/main/resources/static/samples/EmbeddedSenderWithFormDGAdjunct/index.html")));
-        
-        // Demo: Add query parameters to show different demo pages
-        String page = queryParams.get("page");
-        if (page != null) {
-            html = html.replace("<!-- DEMO_PAGE_CONTENT -->", 
-                "<div class='demo-note'>Showing demo page: " + page + "</div>");
+        try (var inputStream = getClass().getResourceAsStream("/static/samples/EmbeddedSenderWithFormDGAdjunct/index.html")) {
+            if (inputStream == null) {
+                throw new IOException("HTML file not found in classpath");
+            }
+            String html = new String(inputStream.readAllBytes());
+            
+            // Demo: Add query parameters to show different demo pages
+            String page = queryParams.get("page");
+            if (page != null) {
+                html = html.replace("<!-- DEMO_PAGE_CONTENT -->", 
+                    "<div class='demo-note'>Showing demo page: " + page + "</div>");
+            }
+
+            return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
         }
-        
-        return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
     }
 
     @Override
@@ -146,12 +152,29 @@ public class IndexController implements ExampleInterface {
 
     private ResponseEntity<?> downloadDocumentGroup(Map<String, Object> data, ApiClient client) throws SignNowApiException, IOException {
         String documentGroupId = (String) data.get("document_group_id");
-        byte[] fileContents = downloadDocumentGroupFile(client, documentGroupId);
+        
+        File file = downloadDocumentGroupFile(client, documentGroupId);
+        
+        String filename = file.getName();
+        byte[] content = Files.readAllBytes(file.toPath());
+        file.delete();
 
         return ResponseEntity.ok()
                 .header("Content-Type", "application/pdf")
-                .header("Content-Disposition", "attachment; filename=\"final_document_group.pdf\"")
-                .body(fileContents);
+                .header("Content-Disposition", "attachment; filename=\"" + filename + "\"")
+                .body(content);
+    }
+
+    private File downloadDocumentGroupFile(ApiClient client, String documentGroupId) throws SignNowApiException {
+        var orderColl = new com.signnow.api.documentgroup.request.data.DocumentOrderCollection();
+        var downloadRequest = new com.signnow.api.documentgroup.request.DownloadDocumentGroupPostRequest(
+            "merged", "no", orderColl
+        ).withDocumentGroupId(documentGroupId);
+
+        var response = (com.signnow.api.documentgroup.response.DownloadDocumentGroupPostResponse) 
+            client.send(downloadRequest).getResponse();
+
+        return response.getFile();
     }
 
     private Map<String, Object> createDocumentGroupFromTemplate(ApiClient client) throws SignNowApiException {
@@ -374,20 +397,7 @@ public class IndexController implements ExampleInterface {
         return signers;
     }
 
-    private byte[] downloadDocumentGroupFile(ApiClient client, String documentGroupId) throws SignNowApiException, IOException {
-        var orderColl = new com.signnow.api.documentgroup.request.data.DocumentOrderCollection();
-        var downloadRequest = new com.signnow.api.documentgroup.request.DownloadDocumentGroupPostRequest(
-            "merged", "no", orderColl
-        ).withDocumentGroupId(documentGroupId);
 
-        var response = (com.signnow.api.documentgroup.response.DownloadDocumentGroupPostResponse) 
-            client.send(downloadRequest).getResponse();
-
-        byte[] content = Files.readAllBytes(response.getFile().toPath());
-        response.getFile().delete();
-
-        return content;
-    }
 
     private com.signnow.api.documentgroup.response.DocumentGroupGetResponse getDocumentGroup(ApiClient client, String documentGroupId) throws SignNowApiException {
         var request = new com.signnow.api.documentgroup.request.DocumentGroupGetRequest()
