@@ -16,6 +16,7 @@ import org.springframework.stereotype.Controller;
 import com.signnow.api.document.response.DocumentDownloadGetResponse;
 import com.signnow.api.document.request.DocumentDownloadGetRequest;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -34,8 +35,13 @@ public class IndexController implements ExampleInterface {
         ApiClient client = new Sdk().build().authenticate().getApiClient();
 
         if ("download-with-status".equals(page)) {
-            String html = new String(Files.readAllBytes(Paths.get("src/main/resources/static/samples/EmbeddedSenderWithoutFormFile/index.html")));
-            return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
+            try (var inputStream = getClass().getResourceAsStream("/static/samples/EmbeddedSenderWithoutFormFile/index.html")) {
+                if (inputStream == null) {
+                    throw new IOException("HTML file not found in classpath");
+                }
+                String html = new String(inputStream.readAllBytes());
+                return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
+            }
         }
 
         String link = getEmbeddedSendingLink(client);
@@ -54,11 +60,16 @@ public class IndexController implements ExampleInterface {
             return ResponseEntity.ok().body(new ObjectMapper().writeValueAsString(statusList));
         }
 
-        byte[] file = downloadDocument(client, documentId);
+        File file = downloadDocumentFile(client, documentId);
+        
+        String filename = file.getName();
+        byte[] content = Files.readAllBytes(file.toPath());
+        file.delete();
+        
         return ResponseEntity.ok()
                 .header("Content-Type", "application/pdf")
-                .header("Content-Disposition", "attachment; filename=\"document.pdf\"")
-                .body(file);
+                .header("Content-Disposition", "attachment; filename=\"" + filename + "\"")
+                .body(content);
     }
 
     private String getEmbeddedSendingLink(ApiClient client) throws SignNowApiException {
@@ -96,14 +107,12 @@ public class IndexController implements ExampleInterface {
         return statuses;
     }
 
-    private byte[] downloadDocument(ApiClient client, String documentId) throws SignNowApiException, IOException {
+    private File downloadDocumentFile(ApiClient client, String documentId) throws SignNowApiException, IOException {
         DocumentDownloadGetRequest downloadRequest = new DocumentDownloadGetRequest();
         downloadRequest.withDocumentId(documentId).withType("collapsed");
 
         DocumentDownloadGetResponse response = (DocumentDownloadGetResponse) client.send(downloadRequest).getResponse();
 
-        byte[] fileBytes = Files.readAllBytes(response.getFile().toPath());
-        response.getFile().delete();
-        return fileBytes;
+        return response.getFile();
     }
 }
