@@ -6,8 +6,7 @@ import com.signnow.api.document.request.DocumentGetRequest;
 import com.signnow.api.document.request.data.*;
 import com.signnow.api.document.request.data.line.LineCollection;
 import com.signnow.api.document.request.data.radiobutton.RadiobuttonCollection;
-import com.signnow.api.documentfield.request.data.Field;
-import com.signnow.api.documentfield.request.data.FieldCollection;
+
 import com.signnow.api.document.response.DocumentGetResponse;
 import com.signnow.api.document.request.DocumentPutRequest;
 import com.signnow.core.ApiClient;
@@ -16,9 +15,10 @@ import com.signnow.javasampleapp.ExampleInterface;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -59,17 +59,22 @@ public class IndexController implements ExampleInterface {
 
     @Override
     public ResponseEntity<String> handleGet(Map<String, String> queryParams) throws IOException {
-        // Demo: Simple HTML page serving
-        String html = new String(Files.readAllBytes(Paths.get("src/main/resources/static/samples/ISVWithFormAndOneClickSendMergeFields/index.html")));
-        
-        // Demo: Add query parameters to show different demo pages
-        String page = queryParams.get("page");
-        if (page != null) {
-            html = html.replace("<!-- DEMO_PAGE_CONTENT -->", 
-                "<div class='demo-note'>Showing demo page: " + page + "</div>");
+        // Demo: Simple HTML page serving - use classpath resource
+        try (var inputStream = getClass().getResourceAsStream("/static/samples/ISVWithFormAndOneClickSendMergeFields/index.html")) {
+            if (inputStream == null) {
+                throw new IOException("HTML file not found in classpath");
+            }
+            String html = new String(inputStream.readAllBytes());
+            
+            // Demo: Add query parameters to show different demo pages
+            String page = queryParams.get("page");
+            if (page != null) {
+                html = html.replace("<!-- DEMO_PAGE_CONTENT -->", 
+                    "<div class='demo-note'>Showing demo page: " + page + "</div>");
+            }
+            
+            return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
         }
-        
-        return ResponseEntity.ok().header("Content-Type", "text/html").body(html);
     }
 
     @Override
@@ -141,12 +146,28 @@ public class IndexController implements ExampleInterface {
             return ResponseEntity.badRequest().body(errorResponse);
         }
 
-        byte[] fileContents = downloadDocumentGroupFile(client, documentGroupId);
+        File file = downloadDocumentGroupFile(client, documentGroupId);
+        
+        String filename = file.getName();
+        byte[] content = Files.readAllBytes(file.toPath());
+        file.delete();
 
         return ResponseEntity.ok()
                 .header("Content-Type", "application/pdf")
-                .header("Content-Disposition", "attachment; filename=\"completed_document.pdf\"")
-                .body(fileContents);
+                .header("Content-Disposition", "attachment; filename=\"" + filename + "\"")
+                .body(content);
+    }
+
+    private File downloadDocumentGroupFile(ApiClient client, String documentGroupId) throws SignNowApiException {
+        var orderColl = new com.signnow.api.documentgroup.request.data.DocumentOrderCollection();
+        var downloadRequest = new com.signnow.api.documentgroup.request.DownloadDocumentGroupPostRequest(
+            "merged", "no", orderColl
+        ).withDocumentGroupId(documentGroupId);
+
+        var response = (com.signnow.api.documentgroup.response.DownloadDocumentGroupPostResponse) 
+            client.send(downloadRequest).getResponse();
+
+        return response.getFile();
     }
 
     private Map<String, Object> createDocumentGroupFromTemplate(ApiClient client) throws SignNowApiException {
@@ -206,27 +227,18 @@ public class IndexController implements ExampleInterface {
                 } else if (COMPANY_NAME_FIELD.equals(fieldName)) {
                     companyNameField = field;
                 } else {
-                    // Create a new Field object for the request using data from response field
-                    Map<String, Object> fieldCoords = extractFieldCoordinates(field);
+                    // Create a new Field object for the request using jsonAttributes directly
                     Map<String, Object> fieldMap = (Map<String, Object>) field;
                     
                     // Extract field attributes
                     Map<String, Object> jsonAttributes = (Map<String, Object>) fieldMap.get("json_attributes");
                     
-                    // Create new field for request - preserve field with its original name
-                    // For DocumentPut, we need to create a field with coordinates and properties
-                    var requestField = new com.signnow.api.document.request.data.Field(
-                        ((Number) fieldCoords.get("x")).intValue(),
-                        ((Number) fieldCoords.get("y")).intValue(),
-                        ((Number) fieldCoords.getOrDefault("width", 25)).intValue(),
-                        ((Number) fieldCoords.getOrDefault("height", 25)).intValue(),
-                        (String) fieldMap.get("type"),
-                        (Integer) fieldCoords.get("pageNumber"),
-                        (Boolean) jsonAttributes.getOrDefault("required", false),
-                        (String) fieldMap.get("role"),
-                        (String) jsonAttributes.get("name"),
-                        (String) jsonAttributes.getOrDefault("label", "") // label parameter
-                    );
+                    // Create new field for request using Field.fromMap() method with jsonAttributes directly
+                    // jsonAttributes already contains all field data including coordinates
+                    jsonAttributes.put("type", fieldMap.getOrDefault("type", "text"));
+                    jsonAttributes.put("role", fieldMap.getOrDefault("role", ""));
+                    
+                    var requestField = com.signnow.api.document.request.data.Field.fromMap(jsonAttributes);
                     fieldCollection.add(requestField);
                 }
             }
@@ -322,8 +334,6 @@ public class IndexController implements ExampleInterface {
         
         return coordinates;
     }
-
-
 
     /**
      * Send invite to recipients for document group signing.
@@ -521,20 +531,7 @@ public class IndexController implements ExampleInterface {
         return signers;
     }
 
-    private byte[] downloadDocumentGroupFile(ApiClient client, String documentGroupId) throws SignNowApiException, IOException {
-        var orderColl = new com.signnow.api.documentgroup.request.data.DocumentOrderCollection();
-        var downloadRequest = new com.signnow.api.documentgroup.request.DownloadDocumentGroupPostRequest(
-            "merged", "no", orderColl
-        ).withDocumentGroupId(documentGroupId);
 
-        var response = (com.signnow.api.documentgroup.response.DownloadDocumentGroupPostResponse) 
-            client.send(downloadRequest).getResponse();
-
-        byte[] content = Files.readAllBytes(response.getFile().toPath());
-        response.getFile().delete();
-
-        return content;
-    }
 
     private com.signnow.api.documentgroup.response.DocumentGroupGetResponse getDocumentGroup(ApiClient client, String documentGroupId) throws SignNowApiException {
         var request = new com.signnow.api.documentgroup.request.DocumentGroupGetRequest()
